# seats.aero-bot

./: .gitignore  README.md  config.example.yaml  credit_cards.py  flight_finder.py  pyproject.toml  requirements.txt
