[project]
name = "seats-aero-bot"
version = "0.1.0"
description = "Find the cheapest award flights using the seats.aero API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "tabulate>=0.9.0",
]

[project.scripts]
flight-finder = "flight_finder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
